# Felt

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Felt.pro  Felt.pro.user.0000000  Felt.pro.user.2.7pre1  Makefile  Makefile.am  NEWS  README  README.md  aclocal.m4  configure.ac  felt-config.cmake  felt.cpp  felt.h  felt_global.h  libFelt.so.1  test.xml
autom4te.cache/: .gitignore
doc/: Doxyfile  customdoxygen.css  doxy-boot.js
docs/: _common_8hpp.html  _common_8hpp.js  _common_8hpp_source.html  _eager_grid_base_8hpp.html  _eager_grid_base_8hpp_source.html  _grid_8hpp.html  _grid_8hpp.js  _grid_8hpp_source.html  _grid_mixin_8hpp.html  _grid_mixin_8hpp_source.html  _lazy_grid_base_8hpp.html  _lazy_grid_base_8hpp_source.html  _lookup_8hpp.html  _lookup_8hpp.js  _lookup_8hpp_source.html  _lookup_grid_base_8hpp.html  _lookup_grid_base_8hpp_source.html  _lookup_mixin_8hpp.html  _lookup_mixin_8hpp_source.html  _multi_lookup_grid_8hpp.html  _multi_lookup_grid_8hpp_source.html  _multi_tracked_grid_8hpp.html  _multi_tracked_grid_8hpp_source.html  _numeric_mixin_8hpp.html  _numeric_mixin_8hpp_source.html  _partition_base_8hpp.html  _partition_base_8hpp_source.html  _partitioned_8hpp.html  _partitioned_8hpp.js  _partitioned_8hpp_source.html  _partitioned_grid_8hpp.html  _partitioned_grid_8hpp_source.html  _partitioned_mixin_8hpp.html  _partitioned_mixin_8hpp.js  _partitioned_mixin_8hpp_source.html  _poly_8hpp.html  _poly_8hpp.js  _poly_8hpp_source.html  _poly_base_8hpp.html  _poly_base_8hpp_source.html  (+501 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  (+52 more)
exampleProgram/: .gitignore  Makefile.am  exampleProgram.cpp
exampleProgram/.deps/: .gitignore
exampleProgram/.libs/: .gitignore
felt/: Grid.hpp  Poly.hpp  Surface.hpp
html/: _common_8hpp_source.html  _grid_8hpp.js  _grid_8hpp_source.html  _lookup_8hpp.js  _lookup_mixin_8hpp.html  _lookup_mixin_8hpp_source.html  _numeric_mixin_8hpp.html  _numeric_mixin_8hpp_source.html  _partitioned_8hpp.html  _partitioned_8hpp.js  _partitioned_mixin_8hpp_source.html  _poly_mixin_8hpp.html  _polys_8hpp.html  _polys_8hpp_source.html  _surface_8hpp.js  _tracked_8hpp.html  _tracked_8hpp_source.html  annotated.html  annotated_dup.js  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_by_ref.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_by_ref.js  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_by_value-members.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_by_value.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_by_value.js  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_access_1_1_ref.js  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_activate-members.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_activate.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_data-members.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_data.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_index-members.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_index.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_size-members.html  class_felt_1_1_impl_1_1_mixin_1_1_grid_1_1_size.js  class_felt_1_1_impl_1_1_mixin_1_1_lookup_1_1_base.html  class_felt_1_1_impl_1_1_mixin_1_1_lookup_1_1_multi_list_1_1_activate-members.html  class_felt_1_1_impl_1_1_mixin_1_1_lookup_1_1_multi_list_1_1_multi_idx.html  class_felt_1_1_impl_1_1_mixin_1_1_lookup_1_1_single_list_1_1_single_idx-members.html  class_felt_1_1_impl_1_1_mixin_1_1_numeric_1_1_snapshot.js  class_felt_1_1_impl_1_1_mixin_1_1_numeric_1_1_spatial-members.html  class_felt_1_1_impl_1_1_mixin_1_1_numeric_1_1_spatial.js  (+125 more)
html/search/: all_4.js  all_9.js  all_a.js  all_b.js  classes_2.js  classes_4.js  classes_8.js  classes_d.js  defines_0.js  files_0.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_3.js  functions_9.js  functions_a.js  functions_f.js  namespaces_1.js  typedefs_1.js  typedefs_6.js  typedefs_7.js  typedefs_b.js  typedefs_e.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js
include/: .gitignore  ArrayMappedGrid.hpp  Grid.hpp  Makefile.am  MappedGrid.hpp  PartitionedGrid.hpp  Poly.hpp  Surface.hpp
include/Felt/: AlignedArray.hpp  EagerGridBase.hpp  Felt.hpp  Grid.hpp  LazyGridBase.hpp  LazyPartitionedGrid.hpp  LookupGrid.hpp  LookupGridBase.hpp  LookupPartitionedGrid.hpp  MappedGrid.hpp  MultiLookupGrid.hpp  MultiTrackedGrid.hpp  PartitionBase.hpp  PartitionedArray.hpp  PartitionedGrid.hpp  Poly.hpp  PolyBase.hpp  PolyGrid.hpp  Polys.hpp  SharedLookupGrid.hpp  Util.hpp  (+11 more)
lib/: .gitignore
libFelt/: .gitignore  Felt.cpp  Makefile.am
libFelt/.deps/: .gitignore
libFelt/.libs/: .gitignore  libFelt.la
nbproject/: configurations.xml  project.xml
python/: .gitignore  Makefile.am  pyfelt
scripts/: autoexec.py  pyfelt.py
src/: Poly.cpp
tests/: .gitignore  Makefile.am  test_ArrayMappedGrid.cpp  test_Grid.cpp  test_MappedGrid.cpp  test_PartitionedGrid.cpp  test_Poly.cpp  test_Surface.cpp
tests/.deps/: .gitignore
tests/.libs/: .gitignore
(+105 files in other folders)
